--- a/src/frontend/ordini.css
+++ b/src/frontend/ordini.css
@@ -12,6 +12,7 @@ body {
 
 .navbar {
     width: 100%;
+    margin-top: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,17 +21,51 @@ body {
 .content {
     width: 100%;
     height: 100%;
-    background-color: #fda;
+    /* background-color: #fda; */
     display: flex;
     align-items: center;
+
+    margin-top: 2rem;
+
 }
 
 .right {
     width: 55%;
-    background-color: aqua;
+    /* background-color: aqua; */
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .left {
     width: 45%;
     background-color: beige;
+}
+
+.piatto {
+    width: 300px;
+    height: 100px;
+
+    cursor: pointer;
+    border: none;
+    color: transparent;
+}
+
+.infoPrezzi {
+    width: 300px;
+    height: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #ffffff;
+    
+    background-color: #000000;
+}
+
+.container_piatto_singolo {
+    opacity: 92%;
+}
+.container_piatto_singolo:hover {
+    opacity: 100%;
 }
