--- a/src/frontend/ordini.css
+++ b/src/frontend/ordini.css
@@ -20,9 +20,10 @@ body {
 
 .content {
     width: 100%;
-    height: 100%;
+    height: 70vh;
     /* background-color: #fda; */
     display: flex;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 
@@ -54,7 +55,6 @@ body {
     width: 300px;
     height: 100px;
 
-    cursor: pointer;
     border: none;
     color: transparent;
 }
@@ -67,11 +67,12 @@ body {
     align-items: center;
     color: #ffffff;
     
+    cursor: pointer;
     background-color: #000000;
 }
 
 .container_piatto_singolo {
-    opacity: 92%;
+    opacity: 88%;
 }
 .container_piatto_singolo:hover {
     opacity: 100%;
@@ -112,6 +113,11 @@ body {
     color: #0EA60B;
     font-weight: bold;
     font-size: 1.6rem;
+    opacity: 90%;
+    cursor: pointer;
+}
+.tavoli_numerati:hover {
+    opacity: 100%;
 }
 
 .resoconto {
@@ -152,6 +158,10 @@ body {
 
 .resoconto_vuoto {
     text-align: center;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .nome_tavolo {
@@ -200,6 +210,15 @@ body {
 
 }
 
+.blocco {
+    width: 50%;
+    height: 400px;
+    background-color: #4B4575;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+}
 
 
 .selected {
