--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -2,5 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 20px;
+    font-size: 70px;
+}
+
+
+
+.hide {
+    display: none;
 }
